<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HistoryFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/agency_study_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="Nav_btn"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/study" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/study"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/agency_travel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="Nav_btn"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/travel" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/travel"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/agency_work_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="Nav_btn"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/work" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/OK_ls_v"
            android:scrollbars="none"
            android:divider="@color/item_type_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="80dp" />
    </LinearLayout>

</FrameLayout>